Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Ios-sdk by llv22</title>
+    <title>iOS-MyEstimote-Apps by llv22</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Ios-sdk</h1>
+        <h1 class="header">iOS-MyEstimote-Apps</h1>
         <p class="header">Estimote SDK for iOS 8.1 devices </p>
 
         <ul>
